--- a/docs/style.css
+++ b/docs/style.css
@@ -5,6 +5,7 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
@@ -94,4 +95,93 @@ button:hover {
 .error-icon {
     color: red;
     font-weight: bold;
+}
+
+/* Container principal */
+.result-container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+/* Estilizando a área de conteúdo dos resultados */
+.result-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Estilizando a notificação */
+.notification {
+    padding: 10px;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
+/* Cores da notificação */
+.on-time {
+    background-color: #69da6d; /* Verde */
+    color: white;
+}
+
+.late {
+    background-color: #FF9800; /* Laranja */
+    color: white;
+}
+
+.very-late {
+    background-color: #F44336; /* Vermelho */
+    color: white;
+}
+
+.blinking {
+    animation: blinkingText 1.2s infinite;
+}
+
+/* Animação para piscar */
+@keyframes blinkingText {
+    0% { opacity: 1; }
+    50% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+/* Esconde a notificação até que ela seja atualizada */
+.hidden {
+    display: none;
+}
+
+/* Estilizando o botão de voltar */
+.back-button {
+    margin-top: 20px;
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #2196F3;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.back-button:hover {
+    background-color: #1976D2;
+}
+
+
+
+footer {
+    width: 100%;
+    background-color: #333; /* Cor de fundo do rodapé */
+    color: white; /* Cor do texto */
+    padding: 10px 0; /* Espaçamento interno (topo/baixo, esquerda/direita) */
+    border-top: 5px solid #444; /* Borda superior */
+    text-align: center; /* Centralizar o texto */
+    position: fixed; /* Fixar o rodapé na parte inferior da página */
+    bottom: 0; /* Coloca o rodapé no final da página */
+}
+
+.container_footer{
+    width: 100%;
+    max-width: 1200px; /* Largura máxima do conteúdo dentro do rodapé */
+    margin: 0 auto; /* Centraliza o conteúdo do rodapé */
 }
