--- a/docs/resultado.css
+++ b/docs/resultado.css
@@ -72,7 +72,7 @@ footer {
     text-align: center;
     padding: 8px;
     border-top: 5px solid #444;
-    position: fixed;
+    position: relative;
     bottom: 0;
     margin-top: auto;
     width: 100%;
