Ajuste botão para exibir módulos novamente

--- a/docs/resultado.css
+++ b/docs/resultado.css
@@ -108,6 +108,7 @@ footer h3 {
 
 .back-button:hover {
     background-color: #0056b3;
+    transform: scale(1.05);
 }
 
 .verificar-backup-header {
